➕ Fixed bug & Implement tag components

--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
     />
     <link rel="stylesheet" href="./styles/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <strong class="tag_pink">특가</strong>
+    <div class="tag_grey">무료배송</div>
+    <strong class="tag_green">첫 리뷰 두 배 적립</strong>
+  </body>
 </html>
