--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <title>
       보아르 &gt; 캠핑/가정용 400W 미니멀 전기히터 VO-HT015 (안전장치기능탑재)
     </title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3da5f5" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#3da5f5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,8 +37,52 @@
     <link rel="stylesheet" href="./styles/css/style.css" />
   </head>
   <body>
-    <strong class="tag_pink">특가</strong>
-    <div class="tag_grey">무료배송</div>
-    <strong class="tag_green">첫 리뷰 두 배 적립</strong>
+    <!-- './modules/tags' -->
+    <div>
+      <strong class="tag_pink">특가</strong>
+      <div class="tag_grey">무료배송</div>
+      <strong class="tag_green">첫 리뷰 두 배 적립</strong>
+    </div>
+
+    <!-- './modules/avatars' -->
+    <div>
+      <div class="avatar-32">
+        <img src="./assets/images/img-user-01.jpg" alt="프로필" />
+      </div>
+      <div class="avatar-24">
+        <img src="./assets/images/img-user-01.jpg" alt="프로필" />
+      </div>
+    </div>
+
+    <div>
+      <div class="star-rating-13">
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+      </div>
+      <div class="star-rating-16">
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+      </div>
+      <div class="star-rating-20">
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+      </div>
+      <div class="star-rating-24">
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+        <i class="ic_star is-active"></i>
+      </div>
+    </div>
   </body>
 </html>
