--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
     </div>
 
+    <!-- './modules/start-rating' -->
     <div>
       <div class="star-rating-13">
         <i class="ic_star is-active"></i>
@@ -82,6 +83,26 @@
         <i class="ic_star is-active"></i>
         <i class="ic_star is-active"></i>
         <i class="ic_star is-active"></i>
+      </div>
+    </div>
+
+    <!-- './modules/prices' -->
+    <div>
+      <div class="price-off">
+        <strong class="amount">40,000</strong>
+        <span class="currenct">원</span>
+      </div>
+      <div class="price-16">
+        <strong class="amount">40,000</strong>
+        <span class="currenct">원</span>
+      </div>
+      <div class="price-20">
+        <strong class="amount">40,000</strong>
+        <span class="currenct">원</span>
+      </div>
+      <div class="price-32">
+        <strong class="amount">40,000</strong>
+        <span class="currenct">원</span>
       </div>
     </div>
   </body>
