💄 Implement button component

--- a/index.html
+++ b/index.html
@@ -105,5 +105,45 @@
         <span class="currenct">원</span>
       </div>
     </div>
+
+    <!-- './modules/buttons' -->
+    <div>
+      <button type="button" class="btn-32 btn-primary">버튼입니다.</button>
+      <button type="button" class="btn-32 btn-secondary">버튼입니다.</button>
+      <button type="button" class="btn-32 btn-outlined">버튼입니다.</button>
+      <button type="button" class="btn-32 btn-ghost">버튼입니다.</button>
+    </div>
+    <div>
+      <button type="button" class="btn-40 btn-primary">버튼입니다.</button>
+      <button type="button" class="btn-40 btn-secondary">버튼입니다.</button>
+      <button type="button" class="btn-40 btn-outlined">버튼입니다.</button>
+      <button type="button" class="btn-40 btn-ghost">버튼입니다.</button>
+    </div>
+    <div>
+      <button type="button" class="btn-48 btn-primary">버튼입니다.</button>
+      <button type="button" class="btn-48 btn-secondary">버튼입니다.</button>
+      <button type="button" class="btn-48 btn-outlined">버튼입니다.</button>
+      <button type="button" class="btn-48 btn-ghost">버튼입니다.</button>
+    </div>
+    <div>
+      <button type="button" class="btn-55 btn-primary">버튼입니다.</button>
+      <button type="button" class="btn-55 btn-secondary">버튼입니다.</button>
+      <button type="button" class="btn-55 btn-outlined">버튼입니다.</button>
+      <button type="button" class="btn-55 btn-ghost">버튼입니다.</button>
+    </div>
+    <div>
+      <button type="button" class="btn-55 btn-primary" disabled>
+        버튼입니다.
+      </button>
+      <button type="button" class="btn-55 btn-secondary" disabled>
+        버튼입니다.
+      </button>
+      <button type="button" class="btn-55 btn-outlined" disabled>
+        버튼입니다.
+      </button>
+      <button type="button" class="btn-55 btn-ghost" disabled>
+        버튼입니다.
+      </button>
+    </div>
   </body>
 </html>
