--- a/index.html
+++ b/index.html
@@ -144,6 +144,40 @@
       <button type="button" class="btn-55 btn-ghost" disabled>
         버튼입니다.
       </button>
+
+      <div>
+        <div class="select-group is-active">
+          <select class="form-select">
+            <option value="1">선택 사항 1</option>
+            <option value="2">선택 사항 2</option>
+            <option value="3">선택 사항 3</option>
+            <option value="4">선택 사항 4</option>
+            <option value="5">선택 사항 5</option>
+          </select>
+          <i class="ic_caret" aria-hidden></i>
+        </div>
+
+        <div class="input-group">
+          <i class="ic_search"></i>
+          <input class="form-input" type="text" placeholder="스토어 검색" />
+        </div>
+      </div>
+
+      <div class="pagination">
+        <button class="page-control page-prev" type="button">
+          <i class="ic_chevron"></i>
+        </button>
+        <ol class="page-list">
+          <li class="page-item"><a href="/">1</a></li>
+          <li class="page-item"><a href="/">2</a></li>
+          <li class="page-item is-active"><a href="/">3</a></li>
+          <li class="page-item"><a href="/">4</a></li>
+          <li class="page-item"><a href="/">5</a></li>
+        </ol>
+        <button class="page-control page-next" type="button">
+          <i class="ic_chevron"></i>
+        </button>
+      </div>
     </div>
   </body>
 </html>
