--- a/index.html
+++ b/index.html
@@ -4,37 +4,83 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      보아르 &gt; 캠핑/가정용 400W 미니멀 전기히터 VO-HT015 (안전장치기능탑재)
-    </title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
+    <title>보아르 &gt; 캠핑/가정용 400W 미니멀 전기히터 VO-HT015 (안전장치기능탑재)</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
     <link rel="manifest" href="./site.webmanifest" />
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#3da5f5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="gnb">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="gnb-left">
+              <h1 class="logo">
+                <a href="/">
+                  <img src="./assets/images/Logo.svg" alt="내일의 집" />
+                </a>
+              </h1>
+
+              <nav class="sm-hidden">
+                <h2 class="visually-hidden">메뉴</h2>
+                <ul class="gnb-nav-list">
+                  <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
+                  <li class="gnb-nav-item"><a href="/">스토어</a></li>
+                  <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                </ul>
+              </nav>
+
+              <button class="ignb-icon-button sm-only" type="button" aria-label="메뉴 열기 버튼">
+                <i class="ic_menu"></i>
+              </button>
+            </div>
+
+            <div class="gnb-right">
+              <div class="input-group lg-only">
+                <i class="ic_search"></i>
+                <input class="form-input" type="text" placeholder="스토어 검색" />
+              </div>
+
+              <div class="button-group">
+                <button class="gnb-icon-button lg-hidden" type="button" aria-label="검색창 열기 버튼">
+                  <i class="ic_search"></i>
+                </button>
+
+                <a herf="/" class="gnb-icon-button sm-hidden" aria-label="스크랩북 페이지로 이동">
+                  <i class="ic_bookmark"></i>
+                </a>
+
+                <a herf="/" class="gnb-icon-button sm-hidden" aria-label="내소식 페이지로 이동">
+                  <i class="ic_bell"></i>
+                </a>
+
+                <a herf="/" class="gnb-icon-button" aria-label="장바구니 페이지로 이동">
+                  <i class="ic_cart"></i>
+                </a>
+
+                <button class="gnb-avatar-button sm-hidden" type="button" aria-label="마이메뉴 열기 버튼">
+                  <div class="avatar-32">
+                    <img src="./assets/images/img-user-01.jpg" alt="프로필" />
+                  </div>
+                </button>
+              </div>
+
+              <button class="btn-primary btn-40 sm-hidden" type="button">
+                글쓰기
+                <i class="ic_chevron" aria-hidden></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
